--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>vmLTech</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -13,10 +13,10 @@
     <header>
         <h1><em>vmLTech</em></h1>
         <nav>
-            <span>Seção 1</span>
-            <span>Seção 2</span>
-            <span>Seção 3</span>
-            <span>Seção 4</span>
+            <span><a href="index.html">Home</a></span>
+            <span><a href="">Seção 2</a></span>
+            <span><a href="">Seção 3</a></span>
+            <span><a href="">Seção 4</a></span>
         </nav>
     </header>
 
