--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <span><a href="">Seção 2</a></span>
             <span><a href="">Seção 3</a></span>
             <span><a href="">Seção 4</a></span>
+            <span><a href="">Seção 5</a></span>
         </nav>
     </header>
 
