--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1><em>vmLTech</em></h1>
         <nav>
             <span><a href="index.html">Home</a></span>
-            <span><a href="">Seção 2</a></span>
-            <span><a href="">Seção 3</a></span>
-            <span><a href="">Seção 4</a></span>
-            <span><a href="">Seção 5</a></span>
+            <span><a href="pag2.html">Serviços</a></span>
+            <span><a href="pag3.html">Loja</a></span>
+            <span><a href="pag4.html">Desktops Montados</a></span>
+            <span><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
