--- a/pag2.html
+++ b/pag2.html
@@ -23,6 +23,18 @@
     </header>
 
     <h1>Serviços</h1>
-    
+
+    <main>
+        <h2>Manutenção de Computadores</h2>
+        <img src="imagens/manutenção.jpg" alt="" style="float: right; margin: 10px;">
+        <p>Faremos a manutenção de seu computador, visando sempre a melhor qualidade com o menor custo. Traga seu computador que não está funcionando, não está lingando ou que esteja lento, os cuidados com o Hardware são essensiais para o melhor desempenho do seu computador. Aqui na vmLTech, valorizamos a vida útil de seu computador.</p>
+        <br>
+        <br>
+        
+        <h2>Limpeza</h2>
+        <h2>Formatação de Computadores</h2>
+        <h2>Recuperação de Dados</h2>
+        <h2>Configuração e Preparação</h2>
+    </main>
 </body>
 </html>
