--- a/pag2.html
+++ b/pag2.html
@@ -49,7 +49,7 @@
 
         <h2>Configuração e Preparação</h2>
         <img src="imagens/configepreparacao.jpg" alt="" style="float: right;">
-        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pod ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação</p>
+        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação</p>
     </main>
 </body>
 </html>
