--- a/pag3.html
+++ b/pag3.html
@@ -24,5 +24,15 @@
 
     <h1>Loja</h1>
     
+    <main>
+        <h2>Pen Drives</h2>
+        <h2>HD (Disco Rígido)</h2>
+        <h2>Memória Ram</h2>
+        <h2>Cabos em Geral</h2>
+        <h2>Teclados e Mouse</h2>
+        <h2>Pasta Térmica</h2>
+        <h2>Álcool Isopropílico</h2>
+        <h2>Kit Antiestático</h2>
+    </main>
 </body>
 </html>
