--- a/pag2.html
+++ b/pag2.html
@@ -32,7 +32,7 @@
         <br>
 
         <h2>Limpeza</h2>
-        <img src="imagens/limpeza.jpg" alt="" style="float: left; max-width: 300px;">
+        <img src="imagens/limpeza.jpg" alt="" style="float: left; width: 280px;">
         <p>A limpeza e a boa higienização do seu PC ou Notebook é de vital importância para o bom funcionamento do mesmo. Na vmLTech, temos os melhores itens e recursos para a melhor limpeza do seu computador, tornando aquele seu pc velho e empoeirado, do qual você não liga há tempos, em um pc NOVO. E por um pequeno valor a mais, a limpeza poderá ser do conforto de sua casa, para nosso cliente não precisar se preocupar com o transporte da máquina até nossa oficina. A Limpeza terá desconto ao fazer uma Manutenção ou uma Formatação</p>
 
         <h2>Formatação de Computadores</h2>
