atualização do index

--- a/pag3.html
+++ b/pag3.html
@@ -26,13 +26,29 @@
     
     <main>
         <h2>Pen Drives</h2>
+        <img src="imagens/pendrive.jpg" alt="">
+
         <h2>HD (Disco Rígido)</h2>
+        <img src="imagens/hd.jpg" alt="">
+
         <h2>Memória Ram</h2>
+        <img src="imagens/memoria.jpg" alt="">
+
         <h2>Cabos em Geral</h2>
+        <img src="imagens/cabos.jpg" alt="">
+
         <h2>Teclados e Mouse</h2>
+        <img src="imagens/tecladoemouse.webp" alt="" style="width: 250px;">
+
         <h2>Pasta Térmica</h2>
+
+
         <h2>Álcool Isopropílico</h2>
+
+
         <h2>Kit Antiestático</h2>
+
+
     </main>
 </body>
 </html>
