organizando pagina de vendas

--- a/pag2.html
+++ b/pag2.html
@@ -8,6 +8,12 @@
     <link rel="shortcut icon" href="imagens/brain-png.webp" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
+    <style>
+        h2 {
+            padding-top: 50px;
+        }
+
+    </style>
 
 </head>
 <body>
@@ -32,24 +38,22 @@
         <br>
 
         <h2>Limpeza</h2>
-        <img src="imagens/limpeza.jpg" alt="" style="float: left; width: 280px;">
-        <p>A limpeza e a boa higienização do seu PC ou Notebook é de vital importância para o bom funcionamento do mesmo. Na vmLTech, temos os melhores itens e recursos para a melhor limpeza do seu computador, tornando aquele seu pc velho e empoeirado, do qual você não liga há tempos, em um pc NOVO. E por um pequeno valor a mais, a limpeza poderá ser do conforto de sua casa, para nosso cliente não precisar se preocupar com o transporte da máquina até nossa oficina. A Limpeza terá desconto ao fazer uma Manutenção ou uma Formatação</p>
+        <img src="imagens/limpeza.jpg" alt="" style="float: left; width: 270px;">
+        <p>A limpeza e a boa higienização do seu PC ou Notebook é de vital importância para o bom funcionamento do mesmo. Na vmLTech, temos os melhores itens e recursos para a melhor limpeza do seu computador, tornando aquele seu pc velho e empoeirado, do qual você não liga há tempos, em um pc NOVO. E por um pequeno valor a mais, a limpeza poderá ser do conforto de sua casa, para nosso cliente não precisar se preocupar com o transporte da máquina até nossa oficina. A Limpeza terá desconto ao fazer uma Manutenção ou uma Formatação.</p>
 
         <h2>Formatação de Computadores</h2>
-        <img src="imagens/formatação.jpg" alt="" style="float: right;">
+        <img src="imagens/formatação.jpg" alt="" style="float: right; width: 250px;">
         <p>Após um certo tempo de uso, o desempenho do computador pode ser afetado por diversos fatores relacionados ao Software, por isso é recomendável uma formatação de tempos em tempos e recuperar o total desempenho de seu computador. Aqui, oferecemos a formatação com a instalação do Sistema Operacional que preferir, além de instalarmos os progremas que você sentir necessidade (navegadores, descompactadores, o Office, leitores de PDF, etc). Traga seu computador para uma formatação segura e sem risco da perda de seus dados e arquivos.</p>
 
         <h2>Recuperação de Dados</h2>
-        <img src="imagens/recuperação.jpg" alt="" style="float: left;">
+        <img src="imagens/recuperação.jpg" alt="" style="float: left; width: 200px;">
         <p>A pior coisa que se pode ocorrer com qualquer um é a perda ou acidental exclusão de arquivos importantes, ou precisar recuperar esses dados por qualquer motivo que seja, a vmLTech irá fazer a varredura de seu HD, Pen Drive, SSD, e mais, afim de restaurar todos os arquivos do seu dispositivo.</p>
-        <br>
-        <br>
         <br>
         <br>
 
         <h2>Configuração e Preparação</h2>
         <img src="imagens/configepreparacao.jpg" alt="" style="float: right;">
-        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação</p>
+        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação.</p>
     </main>
 </body>
 </html>
