--- a/pag3.html
+++ b/pag3.html
@@ -26,28 +26,28 @@
     
     <main>
         <h2>Pen Drives</h2>
-        <img src="imagens/pendrive.jpg" alt="">
+        <img src="imagens/pendrive.webp" alt="" style="width: 100%; padding: 0px;">
 
         <h2>HD (Disco Rígido)</h2>
-        <img src="imagens/hd.jpg" alt="">
+        <img src="imagens/hd.webp" alt="" style="width: 100%; padding: 0px;">
 
         <h2>Memória Ram</h2>
-        <img src="imagens/memoria.jpg" alt="">
+        <img src="imagens/memoria.jpg" alt="" style="width: 100%; padding: 0px;">
 
-        <h2>Cabos em Geral</h2>
-        <img src="imagens/cabos.jpg" alt="">
+        <h2>Cabos em Geral 10</h2>
+        <img src="imagens/cabos.webp" alt="" style="width: 100%; padding: 0px;">
 
         <h2>Teclados e Mouse</h2>
-        <img src="imagens/tecladoemouse.webp" alt="" style="width: 250px;">
+        <img src="imagens/tecladoemouse.jpg" alt="" style="width: 99%; padding: 0px; border: 5px double ;">
 
         <h2>Pasta Térmica</h2>
-
+        <img src="imagens/pastatermica.jpg" alt="" style="width: 100%; padding: 0px;">
 
         <h2>Álcool Isopropílico</h2>
+        <img src="imagens/alcoolisopropilico.jpg" alt="" style="width: 100%; padding: 0px;">
 
-
-        <h2>Kit Antiestático</h2>
-
+        <h2>Kit Antiestático 20</h2>
+        <img src="imagens/antistatico.jpg" alt="" style="width: 100%; padding: 0px;">
 
     </main>
 </body>
