--- a/pag4.html
+++ b/pag4.html
@@ -23,6 +23,14 @@
     </header>
 
     <h1>Desktops</h1>
-    
+    <h2>Computador Gamer</h2>
+    <img src="imagens/computadorgamer.jpg" alt="">
+
+    <h2>Computador WorlStation</h2>
+    <img src="imagens/computadorworkstation.jpg" alt="">
+
+    <h2>Computador de Casa</h2>
+    <img src="imagens/computadordecasa.jpg" alt="">
+
 </body>
 </html>
