--- a/pag2.html
+++ b/pag2.html
@@ -43,7 +43,7 @@
 
         <h2>Formatação de Computadores</h2>
         <img src="imagens/formatação.jpg" alt="" style="float: right; width: 250px;">
-        <p>Após um certo tempo de uso, o desempenho do computador pode ser afetado por diversos fatores relacionados ao Software, por isso é recomendável uma formatação de tempos em tempos e recuperar o total desempenho de seu computador. Aqui, oferecemos a formatação com a instalação do Sistema Operacional que preferir, além de instalarmos os progremas que você sentir necessidade (navegadores, descompactadores, o Office, leitores de PDF, etc). Traga seu computador para uma formatação segura e sem risco da perda de seus dados e arquivos.</p>
+        <p>Após um certo tempo de uso, o desempenho do computador pode ser afetado por diversos fatores relacionados ao Software, por isso é recomendável uma formatação de tempos em tempos e recuperar o total desempenho de seu computador. Aqui, oferecemos a formatação com a instalação do Sistema Operacional que preferir, além de instalarmos os programas que você sentir necessidade (navegadores, descompactadores, o Office, leitores de PDF, etc). Traga seu computador para uma formatação segura e sem riscos.</p>
 
         <h2>Recuperação de Dados</h2>
         <img src="imagens/recuperação.jpg" alt="" style="float: left; width: 200px;">
