pagina dos desktops

--- a/pag4.html
+++ b/pag4.html
@@ -9,6 +9,38 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+        :root {
+            --azul-escuro:#001220;
+            --azul-claro:#2978A0;
+            --vermelho:#E40520;
+            --vermelho-escuro:#990000;
+            --amarelo:#FCD700;
+            --branco:#F0EEED;
+        }
+
+        div.pcenter {
+            width: 75%;
+            display: block;
+            margin: auto;
+        }
+
+        p.center {
+            text-indent: 0%;
+            text-align: justify;
+        }
+
+        h2 {
+            text-align: center;
+            background-image: linear-gradient(var(--vermelho), var(--vermelho-escuro));
+        }
+
+        img {
+            display: block;
+            margin: auto;
+        }
+    </style>
+
 </head>
 <body>
     <header>
@@ -23,14 +55,52 @@
     </header>
 
     <h1>Desktops</h1>
+
+    <div class="pcenter">
+    <p class="center">Um bom usuário de tecnologia precisa de um Desktop próprio, a vmLTech te entregará o Desktop correto para as suas necessidades. Seja algo mais casual, com capacidades básicas (mas boas) ou seja as melhores configurações, com capacidade para rodar os melhores jogos.</p>
+    </div>
+
+    <br>
+    <br>
     <h2>Computador Gamer</h2>
-    <img src="imagens/computadorgamer.jpg" alt="">
+    <br>
+    <img src="imagens/computadorgamer.png" alt="">
+    <br>
+    <p>-PROCESSADOR INTEL i7-11700K</p>
+    <p>-GeForce RTX 3060 TI 8GB</p>
+    <p>-MEMÓRIA 16GB DDR4</p>
+    <p>-GABINETE GAMER MANCER AEROSTORM</p>
+    <p>-PLACA MÃE B560M</p>
+    <p>-FONTE 650W 80 PLUS PFC ATIVO</p>
+    <p>-Water Cooler Aqua X200</p>
 
+    <br>
+    <br>
     <h2>Computador WorlStation</h2>
-    <img src="imagens/computadorworkstation.jpg" alt="">
+    <br>
+    <img src="imagens/computadorworkstation.png" alt="">
+    <br>
+    <p>-NVIDIA Quadro T1000 4GB</p>
+    <p>-MEMÓRIA 16GB DDR4</p>
+    <p>-PROCESSADOR AMD Ryzen 5 5600X</p>
+    <p>-GABINETE GAMER PICHAU HX500</p>
+    <p>-PLACA MÃE B450M</p>
+    <p>-FONTE 500W 80 PLUS PFC ATIVO</p>
 
+
+    <br>
+    <br>
     <h2>Computador de Casa</h2>
-    <img src="imagens/computadordecasa.jpg" alt="">
+    <br>
+    <img src="imagens/computadordecasa.png" alt="">
+    <br>
+    <p>-GEFORCE GTX 750 TI 4GB</p>
+    <p>-MEMÓRIA 8GB DDR4</p>
+    <p>-PROCESSADOR AMD Ryzen 5 3600</p>
+    <p>-GABINETE TGT G200</p>
+    <p>-PLACA MÃE A320M</p>
+    <p>-FONTE TGT 500W</p>
+
 
 </body>
 </html>
