--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+    
+        div.p {
+            margin: auto;
+            max-width: 800px;
+        }
+
+        p {
+            text-align: justify;
+        }
+    </style>
+
 </head>
 <body>
     <header>
@@ -24,15 +36,14 @@
 
     <h1>Bem-vindo a vmLTech</h1>
 
-    <main>
-        <h1>Olá, Mundo!</h1>
-        <p>Olá Technopeople! A vmLTech é uma empresa de pequeno porte inclusiva e corporativa!! Prezamos pela sua segurança na hora da compra de aparelhos eletrônicos, ao pedir a prestação de algum serviço, entre várias outras experiências que nós da vmLTech podemos lhe proporcionar.</p>
-        <p>Contamos com material de ensino básico sobre tecnologia e o melhor preço do mercado (e não, isso não é jogada de Marketing)</p>
-        <br>
+    <div class="p">
+    <p>Olá Technopeople! A vmLTech é uma empresa de pequeno porte inclusiva e corporativa!! Prezamos pela sua segurança na hora da compra de aparelhos eletrônicos, ao pedir a prestação de algum serviço, entre várias outras experiências que nós da vmLTech podemos lhe proporcionar.</p>
+    <p>Contamos com material de ensino básico sobre tecnologia e o melhor preço do mercado (e não, isso não é jogada de Marketing)</p>
+    </div>
+    <br>
 
-        <img src="imagens/tecnologia.jpg" alt="" style="width: 100%; padding: 0;">
-    </main>
-
+    <img src="imagens/tecnologia.jpg" alt="" style="width: 100%; padding: 0;">
+    
     <footer>
 
     </footer>
