alteração do ico para png

--- a/pag4.html
+++ b/pag4.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktops vmLTech</title>
-    <link rel="shortcut icon" href="imagens/brain-png.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/brain-png.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
 
@@ -19,19 +19,9 @@
             --branco:#F0EEED;
         }
 
-        div.pcenter {
-            width: 75%;
-            display: block;
-            margin: auto;
-        }
-
-        p.center {
-            text-indent: 0%;
-            text-align: justify;
-        }
-
         h2 {
             text-align: center;
+            color: var(--branco);
             background-image: linear-gradient(var(--vermelho), var(--vermelho-escuro));
         }
 
@@ -57,7 +47,7 @@
 
     <h1>Desktops</h1>
 
-    <div class="pcenter">
+    <div class="p">
     <p class="center">Um bom usuário de tecnologia precisa de um Desktop próprio, a vmLTech te entregará o Desktop correto para as suas necessidades. Seja algo mais casual, com capacidades básicas (mas boas) ou seja as melhores configurações, com capacidade para rodar os melhores jogos.</p>
     </div>
 
