--- a/index.html
+++ b/index.html
@@ -5,21 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vmLTech</title>
-    <link rel="shortcut icon" href="imagens/brain-png.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/brain-png.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
-
-    <style>
-    
-        div.p {
-            margin: auto;
-            max-width: 800px;
-        }
-
-        p {
-            text-align: justify;
-        }
-    </style>
 
 </head>
 <body>
