--- a/pag3.html
+++ b/pag3.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <h1><em>vmLTech</em></h1>
+        <img src="imagens/logo_vmltech.png" alt="">
         <nav>
-            <span><a href="index.html">Home</a></span>
-            <span><a href="pag2.html">Serviços</a></span>
-            <span><a href="pag3.html">Loja</a></span>
-            <span><a href="pag4.html">Desktops Montados</a></span>
-            <span><a href="pag5.html">Sobre a vmLTech</a></span>
+            <span class="nav"><a href="index.html">Home</a></span>
+            <span class="nav"><a href="pag2.html">Serviços</a></span>
+            <span class="nav"><a href="pag3.html">Loja</a></span>
+            <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
@@ -27,27 +27,63 @@
     <main>
         <h2>Pen Drives</h2>
         <img src="imagens/pendrive.webp" alt="" style="width: 100%; padding: 0px;">
+        <p> 32 GB - R$25.00</p>
+        <p> 64 GB - R$40.00</p>
+        <p>128 GB - R$110.00</p>
 
         <h2>HD (Disco Rígido)</h2>
         <img src="imagens/hd.webp" alt="" style="width: 100%; padding: 0px;">
+        <p>500 GB - R$200.00</p>
+        <p>  1 TB - R$300.00</p>
+        <p>  2 TB - R$370.00</p>
 
         <h2>Memória Ram</h2>
         <img src="imagens/memoria.jpg" alt="" style="width: 100%; padding: 0px;">
+        <p><strong>Todas as memórias listadas são do padrão DDR4</strong></p>
+        <p> 4 GB - R$170.00</p>
+        <p> 8 GB - R$250.00</p>
+        <p>16 GB - R$320.00</p>
 
-        <h2>Cabos em Geral 10</h2>
+        <h2>Cabos em Geral</h2>
         <img src="imagens/cabos.webp" alt="" style="width: 100%; padding: 0px;">
+        <p>HDMI - R$10.00</p>
+        <p> VGA - R$15.00</p>
+        <p> DVI - R$23.00</p>
+        <p>SATA - R$5.00</p>
+        <p> LAN - R$20.00</p>
 
         <h2>Teclados e Mouse</h2>
         <img src="imagens/tecladoemouse.jpg" alt="" style="width: 99%; padding: 0px; border: 5px double ;">
+        <p><strong>Teclados</strong></p>
+        <p>Redragon - R$200.00</p>
+        <p>  Fallen - R$450.00</p>
+        <p>Logitech - R$230.00</p>
+
+        <p><strong>Mouses</strong></p>
+        <p>Redragon - R$100.00</p>
+        <p>  Fallen - R$350.00</p>
+        <p>Logitech - R$150.00</p>
 
         <h2>Pasta Térmica</h2>
         <img src="imagens/pastatermica.jpg" alt="" style="width: 100%; padding: 0px;">
+        <p>  Artic Silver 5 - R$65.00</p>
+        <p>    Cooling MX-4 - R$70.00</p>
+        <p>Gelid GC Extreme - R$75.00</p>
 
         <h2>Álcool Isopropílico</h2>
         <img src="imagens/alcoolisopropilico.jpg" alt="" style="width: 100%; padding: 0px;">
+        <p>110mL - R$9.00</p>
+        <p>250mL - R$16.00</p>
+        <p>500mL - R$21.00</p>
 
-        <h2>Kit Antiestático 20</h2>
+        <h2>Kit Antiestático </h2>
         <img src="imagens/antistatico.jpg" alt="" style="width: 100%; padding: 0px;">
+        <p>R$20.00</p>
+        <p>Contém:</p>
+        <p>Luvas Antiestáticas</p>
+        <p>Pulseira Antiestática</p>
+        <p>Manta Antiestática</p>
+        <p>Pincéis Antiestáticos</p>
 
     </main>
 </body>
