--- a/pag5.html
+++ b/pag5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobra a vmLTech</title>
+    <title>Sobre a vmLTech</title>
     <link rel="shortcut icon" href="imagens/brain-png.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
@@ -12,16 +12,28 @@
 </head>
 <body>
     <header>
-        <h1><em>vmLTech</em></h1>
+        <img src="imagens/logo_vmltech.png" alt="">
         <nav>
-            <span><a href="index.html">Home</a></span>
-            <span><a href="pag2.html">Serviços</a></span>
-            <span><a href="pag3.html">Loja</a></span>
-            <span><a href="pag4.html">Desktops Montados</a></span>
-            <span><a href="pag5.html">Sobre a vmLTech</a></span>
+            <span class="nav"><a href="index.html">Home</a></span>
+            <span class="nav"><a href="pag2.html">Serviços</a></span>
+            <span class="nav"><a href="pag3.html">Loja</a></span>
+            <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
     <h1>Sobre a vmLTech</h1>
+    
+    <main>
+        <h2>O Surgimento da vmlTech</h2>
+        <p>A vmLTech surgiu 2022, com a proposta e intenção de ajudar, auxiliar e ensinar pessoas no ramo da tecnologia, e desde a criação desta empresa, </p>
+        <h2>Redes Sociais</h2>
+        
+        <p style="padding-top: 30px; padding-right: 30px;">Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
+        <a href="https://instagram.com/_vmltech">
+            <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
+        </a>
+
+    </main>
 </body>
 </html>
