--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <header>
-        <h1><em>vmLTech</em></h1>
+        <img src="imagens/logo_vmltech.png" alt="">
         <nav>
-            <span><a href="index.html">Home</a></span>
-            <span><a href="pag2.html">Serviços</a></span>
-            <span><a href="pag3.html">Loja</a></span>
-            <span><a href="pag4.html">Desktops Montados</a></span>
-            <span><a href="pag5.html">Sobre a vmLTech</a></span>
+            <span class="nav"><a href="index.html">Home</a></span>
+            <span class="nav"><a href="pag2.html">Serviços</a></span>
+            <span class="nav"><a href="pag3.html">Loja</a></span>
+            <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
@@ -26,7 +26,7 @@
 
     <div class="p">
     <p>Olá Technopeople! A vmLTech é uma empresa de pequeno porte inclusiva e corporativa!! Prezamos pela sua segurança na hora da compra de aparelhos eletrônicos, ao pedir a prestação de algum serviço, entre várias outras experiências que nós da vmLTech podemos lhe proporcionar.</p>
-    <p>Contamos com material de ensino básico sobre tecnologia e o melhor preço do mercado (e não, isso não é jogada de Marketing)</p>
+    <p>Contamos com material de ensino básico sobre tecnologia e o melhor preço do mercado (e não, isso não é jogada de Marketing).</p>
     </div>
     <br>
 
