--- a/pag4.html
+++ b/pag4.html
@@ -35,13 +35,13 @@
 </head>
 <body>
     <header>
-        <h1><em>vmLTech</em></h1>
+        <img src="imagens/logo_vmltech.png" alt="">
         <nav>
-            <span><a href="index.html">Home</a></span>
-            <span><a href="pag2.html">Serviços</a></span>
-            <span><a href="pag3.html">Loja</a></span>
-            <span><a href="pag4.html">Desktops Montados</a></span>
-            <span><a href="pag5.html">Sobre a vmLTech</a></span>
+            <span class="nav"><a href="index.html">Home</a></span>
+            <span class="nav"><a href="pag2.html">Serviços</a></span>
+            <span class="nav"><a href="pag3.html">Loja</a></span>
+            <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
