--- a/pag5.html
+++ b/pag5.html
@@ -29,8 +29,8 @@
         <p>A vmLTech surgiu 2022, com a proposta e intenção de ajudar, auxiliar e ensinar pessoas no ramo da tecnologia, e desde a criação desta empresa, </p>
         <h2>Redes Sociais</h2>
         
-        <p style="padding-top: 30px; padding-right: 30px;">Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
-        <a href="https://instagram.com/_vmltech">
+        <p>Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
+        <a href="https://instagram.com/_vmltech" target="_blank">
             <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
         </a>
 
