--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     <br>
 
     <img src="imagens/tecnologia.jpg" alt="" style="width: 100%; padding: 0;">
+
+    <h1>Olá, Mundo!</h1>
+    <div class="p">
+    <p>Gostariamos de dizer um belo Olá, Mundo! a todos os novos clientes que estão conhecendo nossos serviços. Além de nossos serviços, oferecemos conteúdos de qualidade em nossas redes sociais relacionados ao mundo da Informática, coisas como notícias, dicas de programação e semelhantes, etc.</p>
+    </div>
+
+    <img src="imagens/tecnologia2.webp" alt="" style="width: 100%; padding: 0;">
     
     <footer>
 
