--- a/pag3.html
+++ b/pag3.html
@@ -25,6 +25,10 @@
     <h1>Loja</h1>
     
     <main>
+        <br>
+        <br>
+
+        <p>Em nossa loja física, vendemos componentes e itens relacionados a tecnologia, ao fazer a sua visita, compre os itens necessários, como um Pen Drive para armazenar seus dados mais importantes, ou compre uma Memória Ram para fazer aquele upgrade no seu Desktop.</p>
         <h2>Pen Drives</h2>
         <img src="imagens/pendrive.webp" alt="" style="width: 100%; padding: 0px;">
         <p> 32 GB - R$25.00</p>
