--- a/pag5.html
+++ b/pag5.html
@@ -23,12 +23,15 @@
     </header>
 
     <h1>Sobre a vmLTech</h1>
-    
+
     <main>
         <h2>O Surgimento da vmlTech</h2>
         <p>A vmLTech surgiu 2022, com a proposta e intenção de ajudar, auxiliar e ensinar pessoas no ramo da tecnologia, e desde a criação desta empresa, </p>
+        <br>
+
+        <img src="imagens/tecnologia3.jpg" alt="" style="padding: 0; width: 100%;">
+
         <h2>Redes Sociais</h2>
-        
         <p>Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
         <a href="https://instagram.com/_vmltech" target="_blank">
             <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
