--- a/pag4.html
+++ b/pag4.html
@@ -67,7 +67,7 @@
 
     <br>
     <br>
-    <h2>Computador WorlStation</h2>
+    <h2>Computador WorkStation</h2>
     <br>
     <img src="imagens/computadorworkstation.png" alt="">
     <br>
