--- a/index.html
+++ b/index.html
@@ -22,25 +22,62 @@
         </nav>
     </header>
 
+    <h1>Olá, Mundo!</h1>
     <h1>Bem-vindo a vmLTech</h1>
 
     <div class="p">
     <p>Olá Technopeople! A vmLTech é uma empresa de pequeno porte inclusiva e corporativa!! Prezamos pela sua segurança na hora da compra de aparelhos eletrônicos, ao pedir a prestação de algum serviço, entre várias outras experiências que nós da vmLTech podemos lhe proporcionar.</p>
     <p>Contamos com material de ensino básico sobre tecnologia e o melhor preço do mercado (e não, isso não é jogada de Marketing).</p>
+    <p>Gostariamos de dizer um belo Olá, Mundo! a todos os novos clientes que estão conhecendo nossos serviços. Além de nossos serviços, oferecemos conteúdos de qualidade em nossas redes sociais relacionados ao mundo da Informática, coisas como notícias, dicas de programação e semelhantes, etc.</p>
     </div>
     <br>
 
     <img src="imagens/tecnologia.jpg" alt="" style="width: 100%; padding: 0;">
 
-    <h1>Olá, Mundo!</h1>
-    <div class="p">
-    <p>Gostariamos de dizer um belo Olá, Mundo! a todos os novos clientes que estão conhecendo nossos serviços. Além de nossos serviços, oferecemos conteúdos de qualidade em nossas redes sociais relacionados ao mundo da Informática, coisas como notícias, dicas de programação e semelhantes, etc.</p>
+    <h1>Missão, Visão e Valores</h1>
+
+    <div style="width: 66%; max-width: 100%; display: block; margin: auto;">
+        <div class="mvv">
+            <h1 style="text-align: center;">Missão</h1>
+            <p>- Suporte com Tecnologias</p>
+            <p>- Serviços de qualidade</p>
+            <p>- Inovação</p>
+            <p>- </p>
+            <p>- </p>
+            <p>- </p>
+        </div>
+
+        <div class="mvv">
+            <h1 style="text-align: center;">Visão</h1>
+            <p>- Agregação de valor ao mercado</p>
+            <p>- Cresimento no ramo</p>
+            <p>- Reconhecimento nacional</p>
+            <p style="margin-left: 10px; margin-right: 10px;">- Impulsionar o mundo da tecnologia</p>
+            <p>- </p>
+        </div>
+
+        <div class="mvv">
+            <h1 style="text-align: center;">Valores</h1>
+            <p>- Honestidade e Transparência</p>
+            <p>- Baixos Custos</p>
+            <p>- Princípios éticos e morais</p>
+            <p>- Respeito</p>
+            <p>- Educação</p>
+            <p>- Dedicação</p>
+        </div>
     </div>
 
-    <img src="imagens/tecnologia2.webp" alt="" style="width: 100%; padding: 0;">
-    
-    <footer>
+    <br>
 
-    </footer>
+    <main>
+        <h1>Nossas Redes Sociais</h1>
+        <p>Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
+        <a href="https://instagram.com/_vmltech" target="_blank">
+            <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
+        </a>
+    </main>
+
+    <br>
+    
 </body>
 </html>
