--- a/pag4.html
+++ b/pag4.html
@@ -53,7 +53,7 @@
 
     <br>
     <br>
-    <h2>Computador Gamer</h2>
+    <h2>Computador Gamer <br> R$ 9.157,97</h2>
     <br>
     <img src="imagens/computadorgamer.png" alt="">
     <br>
@@ -67,7 +67,7 @@
 
     <br>
     <br>
-    <h2>Computador WorkStation</h2>
+    <h2>Computador WorkStation <br> R$ 6.187,27</h2>
     <br>
     <img src="imagens/computadorworkstation.png" alt="">
     <br>
@@ -81,7 +81,7 @@
 
     <br>
     <br>
-    <h2>Computador de Casa</h2>
+    <h2>Computador de Casa <br> R$ 3.615,53</h2>
     <br>
     <img src="imagens/computadordecasa.png" alt="">
     <br>
