--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <span class="nav"><a href="pag2.html">Serviços</a></span>
             <span class="nav"><a href="pag3.html">Loja</a></span>
             <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
-            <span class="nav"><a href="pag5.html">Sobre a vmLTech</a></span>
         </nav>
     </header>
 
@@ -42,18 +41,16 @@
             <p>- Suporte com Tecnologias</p>
             <p>- Serviços de qualidade</p>
             <p>- Inovação</p>
-            <p>- </p>
-            <p>- </p>
-            <p>- </p>
+            <p style="margin-left: 10px; margin-right: 10px;">- Fornecer conhecimento aos interessados na área</p>
         </div>
 
         <div class="mvv">
             <h1 style="text-align: center;">Visão</h1>
             <p>- Agregação de valor ao mercado</p>
-            <p>- Cresimento no ramo</p>
+            <p>- Crescimento no ramo</p>
             <p>- Reconhecimento nacional</p>
-            <p style="margin-left: 10px; margin-right: 10px;">- Impulsionar o mundo da tecnologia</p>
-            <p>- </p>
+            <p>- Impulsionar o mundo da tecnologia</p>
+            <p>- Modelo de exemplo</p>
         </div>
 
         <div class="mvv">
@@ -61,8 +58,7 @@
             <p>- Honestidade e Transparência</p>
             <p>- Baixos Custos</p>
             <p>- Princípios éticos e morais</p>
-            <p>- Respeito</p>
-            <p>- Educação</p>
+            <p>- Perspectiva de oportunidades</p>
             <p>- Dedicação</p>
         </div>
     </div>
