--- a/pag2.html
+++ b/pag2.html
@@ -24,6 +24,7 @@
             <span class="nav"><a href="pag2.html">Serviços</a></span>
             <span class="nav"><a href="pag3.html">Loja</a></span>
             <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Módulos de Ensino</a></span>
         </nav>
     </header>
 
@@ -61,5 +62,14 @@
         <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação.</p>
         <p><strong>Preparo de todos os softwares</strong>: R$60</p>
     </main>
+
+    <br>
+
+    <h1><a href="pag3.html">Próxima página >>>>></a></h1>
+
+    <br>
+    <br>
+    <br>
+
 </body>
 </html>
