--- a/pag4.html
+++ b/pag4.html
@@ -41,6 +41,7 @@
             <span class="nav"><a href="pag2.html">Serviços</a></span>
             <span class="nav"><a href="pag3.html">Loja</a></span>
             <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Módulos de Ensino</a></span>
         </nav>
     </header>
 
@@ -91,6 +92,13 @@
     <p>-PLACA MÃE A320M</p>
     <p>-FONTE TGT 500W</p>
 
+    <br>
+
+    <h1><a href="pag5.html">Próxima página >>>>></a></h1>
+
+    <br>
+    <br>
+    <br>
 
 </body>
 </html>
