--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <span class="nav"><a href="pag2.html">Serviços</a></span>
             <span class="nav"><a href="pag3.html">Loja</a></span>
             <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Módulos de Ensino</a></span>
         </nav>
     </header>
 
@@ -73,6 +74,12 @@
         </a>
     </main>
 
+    <br>
+
+    <h1><a href="pag2.html">Próxima página >>>>></a></h1>
+
+    <br>
+    <br>
     <br>
     
 </body>
