--- a/pag3.html
+++ b/pag3.html
@@ -18,6 +18,7 @@
             <span class="nav"><a href="pag2.html">Serviços</a></span>
             <span class="nav"><a href="pag3.html">Loja</a></span>
             <span class="nav"><a href="pag4.html">Desktops Montados</a></span>
+            <span class="nav"><a href="pag5.html">Módulos de Ensino</a></span>
         </nav>
     </header>
 
@@ -89,5 +90,14 @@
         <p>Pincéis Antiestáticos</p>
 
     </main>
+
+    <br>
+
+    <h1><a href="pag4.html">Próxima página >>>>></a></h1>
+
+    <br>
+    <br>
+    <br>
+
 </body>
 </html>
