num e email de contato

--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
         </a>
     </main>
 
-    <br>
-
+    <div class="p">
+        <p>Número de Contato: +55 (11) 94002-8922</p>
+        <p>E-mail: vmltechinovação22@gmail.com</p>
+    </div>
+    
     <h1><a href="pag2.html">Próxima página >>>>></a></h1>
 
     <br>
