--- a/pag2.html
+++ b/pag2.html
@@ -41,26 +41,27 @@
         <h2>Limpeza</h2>
         <img src="imagens/limpeza.jpg" alt="" style="width: 50%; padding: 0px; display: block; margin: auto;">
         <br>
-        <p>A limpeza e a boa higienização do seu PC ou Notebook é de vital importância para o bom funcionamento do mesmo. Na vmLTech, temos os melhores itens e recursos para a melhor limpeza do seu computador, tornando aquele seu pc velho e empoeirado, do qual você não liga há tempos, em um pc NOVO. E por um pequeno valor a mais, a limpeza poderá ser do conforto de sua casa, para nosso cliente não precisar se preocupar com o transporte da máquina até nossa oficina. A Limpeza terá desconto ao fazer uma Manutenção ou uma Formatação.</p>
+        <p>A limpeza e a boa higienização do seu PC ou Notebook é de vital importância para o bom funcionamento do mesmo. Na vmLTech, temos os melhores itens e recursos para a melhor higienização do seu computador, tornando aquele seu pc antigo e empoeirado, do qual você não liga há tempos, em um pc NOVO. E por um pequeno valor a mais, a limpeza poderá ser do conforto de sua casa, para nosso cliente não precisar se preocupar com o transporte da máquina até nossa oficina. A Limpeza terá desconto ao fazer uma Manutenção ou uma Formatação.</p>
         <p><strong>Limpeza completa</strong>: R$120,00</p>
+        <p><strong>Valor da limpeza a domicílio: a combinar</strong></p>
 
         <h2>Formatação de Computadores</h2>
         <img src="imagens/formatação.jpg" alt="" style="width: 50%; padding: 0px; display: block; margin: auto;">
         <br>
-        <p>Após um certo tempo de uso, o desempenho do computador pode ser afetado por diversos fatores relacionados ao Software, por isso é recomendável uma formatação de tempos em tempos e recuperar o total desempenho de seu computador. Aqui, oferecemos a formatação com a instalação do Sistema Operacional que preferir, além de instalarmos os programas que você sentir necessidade (navegadores, descompactadores, o Office, leitores de PDF, etc). Traga seu computador para uma formatação segura e sem riscos.</p>
+        <p>Após um certo tempo de uso, o desempenho do computador pode ser afetado por diversos fatores relacionados ao Software, como vírus e arquivos inativos, por isso é recomendável uma formatação de tempos em tempos e recuperar o total desempenho de sua máquina. Aqui, oferecemos a formatação com a instalação do Sistema Operacional que preferir, além de instalarmos os programas que você sentir necessidade (navegadores, descompactadores, Office ou LibreOffice, leitores de PDF, etc). Traga seu computador para uma formatação segura e sem riscos.</p>
         <p><strong>Formatação</strong>: R$100</p>
 
         <h2>Recuperação de Dados</h2>
         <img src="imagens/recuperaçãodedados.png" alt="" style="width: 50%; padding: 0px; display: block; margin: auto;">
         <br>
-        <p>A pior coisa que se pode ocorrer com qualquer um é a perda ou acidental exclusão de arquivos importantes, ou precisar recuperar esses dados por qualquer motivo que seja, a vmLTech irá fazer a varredura de seu HD, Pen Drive, SSD, e mais, afim de restaurar todos os arquivos do seu dispositivo.</p>
+        <p>A pior coisa que se pode ocorrer com qualquer um é a perda ou acidental exclusão de arquivos importantes, ou precisar recuperar esses dados por qualquer motivo que seja. A vmLTech irá fazer a varredura de seu HD, Pen Drive, SSD, e mais, afim de restaurar todos os arquivos do seu dispositivo.</p>
         <p><strong>Por MB recuperado</strong>: R$0,01</p>
 
         <h2>Configuração e Preparação</h2>
         <img src="imagens/confguraçãoepreparação.jpg" alt="" style="width: 50%; padding: 0px; display: block; margin: auto;">
         <br>
-        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr>, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação.</p>
-        <p><strong>Preparo de todos os softwares</strong>: R$60</p>
+        <p>Nem todos os usuários de computadores possuem os conhecimentos mais aprofundados do <abbr title="Componentes físicos do Computador">Hardware</abbr> de seu computador, e isso pode ser prejudicial, já que a instalação de programas incompatíveis ou pouco compatíveis com o Hardware pode levar a perda de desempenho. Pensando nisso, a vmLTech analisará seu computador e instalará os melhores programas para o seu desempenho. A Configuração e Preparação virá como brinde ao fazer uma Formatação.</p>
+        <p><strong>Preparo de todos os softwares</strong>: R$50</p>
     </main>
 
     <br>
