--- a/pag3.html
+++ b/pag3.html
@@ -9,6 +9,12 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+        img {
+            margin-bottom: 20px;
+        }
+    </style>
+
 </head>
 <body>
     <header>
