--- a/pag4.html
+++ b/pag4.html
@@ -48,7 +48,7 @@
     <h1>Desktops</h1>
 
     <div class="p">
-    <p class="center">Um bom usuário de tecnologia precisa de um Desktop próprio, a vmLTech te entregará o Desktop correto para as suas necessidades. Seja algo mais casual, com capacidades básicas (mas boas) ou seja as melhores configurações, com capacidade para rodar os melhores jogos.</p>
+    <p class="center">Um bom usuário de tecnologia precisa de um Desktop apropriado a suas necessidades, a vmLTech te entregará o Desktop correto para as suas necessidades. Seja algo mais casual, com capacidades básicas (mas boas) ou seja as melhores configurações, com capacidade para rodar os melhores jogos da atualidadde.</p>
     </div>
 
     <br>
