--- a/pag5.html
+++ b/pag5.html
@@ -24,7 +24,7 @@
 
     <h1>Módulos de Ensino</h1>
     <div class="p">
-    <p>Prezando a diversidade, a dedicação e as oportunidades, a vmLTech criou conteúdos de ensino para nossos clientes e seguidores. Acreditamos que a mudança no mundo tem em base no aprendizado e na educação, esperamos que esses conteúdos disponibilizados gratuitamente possam lhe ajudar a engressar no ramo da tecnologia e dispertar o seu interesse.</p>
+    <p>Prezando a diversidade, a dedicação e as oportunidades, a vmLTech criou conteúdos de ensino para nossos clientes e seguidores. Acreditamos que a mudança no mundo tem em base no aprendizado e na educação, esperamos que esses conteúdos disponibilizados gratuitamente possam lhe ajudar a engressar no ramo da tecnologia e despertar o seu interesse.</p>
     
     </div>
     <h1><a href="https://docs.google.com/document/d/19_sbpmjceiz_x_uOxo1R5r_TfFK_eYFd/edit" target="_blank">Computadores - Guia Básico</a></h1>
