reestruturação do site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <style>
+        :root {
+            --azul-escuro:#001220;
+            --azul-claro:#2978A0;
+            --vermelho:#E40520;
+            --vermelho-escuro:#990000;
+            --amarelo:#FCD700;
+            --branco:#F0EEED;
+        }
+
+        h2 {
+            text-align: center;
+            color: var(--branco);
+            background-image: linear-gradient(var(--vermelho), var(--vermelho-escuro));
+        }
+    </style>
+
 </head>
 <body>
     <header>
@@ -34,7 +51,10 @@
 
     <img src="imagens/tecnologia.jpg" alt="" style="width: 100%; padding: 0;">
 
-    <h1>Missão, Visão e Valores</h1>
+    <br>
+    <br>
+    <h2>Missão, Visão e Valores</h2>
+    <br>
 
     <div style="width: 66%; max-width: 100%; display: block; margin: auto;">
         <div class="mvv">
@@ -66,19 +86,23 @@
 
     <br>
 
-    <main>
-        <h1>Nossas Redes Sociais</h1>
-        <p>Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
-        <a href="https://instagram.com/_vmltech" target="_blank">
-            <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
-        </a>
-    </main>
+    <h2>Nossas Redes Sociais</h2>
+    <div class="p">
+    <p>Siga-nos também no Instagram, lá você verá conteúdo de qualidade sobre as tecnologias do mundo a fora, além de todas as novidades relacionadas ao mundo da informática.</p>
+    </div>
+    <a href="https://instagram.com/_vmltech" target="_blank">
+        <img src="imagens/logoinstagram.webp" alt="" style="width: 30%; display: block; margin: auto;">
+    </a>
+
+    <br>
+    <br>
+    <br>
 
     <div class="p">
         <p>Número de Contato: +55 (11) 94002-8922</p>
         <p>E-mail: vmltechinovação22@gmail.com</p>
     </div>
-    
+
     <h1><a href="pag2.html">Próxima página >>>>></a></h1>
 
     <br>
