--- a/pag3.html
+++ b/pag3.html
@@ -10,6 +10,21 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
+        :root {
+            --azul-escuro:#001220;
+            --azul-claro:#2978A0;
+            --vermelho:#E40520;
+            --vermelho-escuro:#990000;
+            --amarelo:#FCD700;
+            --branco:#F0EEED;
+        }
+
+        h2 {
+            text-align: center;
+            color: var(--branco);
+            background-image: linear-gradient(var(--vermelho), var(--vermelho-escuro));
+        }
+        
         img {
             margin-bottom: 20px;
         }
@@ -29,12 +44,11 @@
     </header>
 
     <h1>Loja</h1>
-    
-    <main>
-        <br>
-        <br>
 
+        <div class="p">
         <p>Em nossa loja física, vendemos componentes e itens relacionados a tecnologia, ao fazer a sua visita, compre os itens necessários, como um Pen Drive para armazenar seus dados mais importantes, ou compre uma Memória Ram para fazer aquele upgrade no seu Desktop.</p>
+        </div>
+
         <h2>Pen Drives</h2>
         <img src="imagens/pendrive.webp" alt="" style="width: 100%; padding: 0px;">
         <p> 32 GB - R$25.00</p>
@@ -63,7 +77,7 @@
         <p> LAN - R$20.00</p>
 
         <h2>Teclados e Mouse</h2>
-        <img src="imagens/tecladoemouse.jpg" alt="" style="width: 99%; padding: 0px; border: 5px double ;">
+        <img src="imagens/tecladoemouse.jpg" alt="" style="width: 100%; padding: 0px;">
         <p><strong>Teclados</strong></p>
         <p>Redragon - R$200.00</p>
         <p>  Fallen - R$450.00</p>
@@ -95,7 +109,7 @@
         <p>Manta Antiestática</p>
         <p>Pincéis Antiestáticos</p>
 
-    </main>
+    <!-- </main> -->
 
     <br>
 
