correção do email

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="p">
         <p>Número de Contato: +55 (11) 94002-8922</p>
-        <p>E-mail: vmltechinovação22@gmail.com</p>
+        <p>E-mail: vmltechinovacao22@gmail.com</p>
     </div>
 
     <h1><a href="pag2.html">Próxima página >>>>></a></h1>
